# pisi

./: .gitignore  .spyderproject  .spyderworkspace  AUTHORS  CODING  COPYING  COPYING.md  COPYING.new  HISTORY  HISTORY.devel-fork  INSTALL  MANIFEST.in  NEWS  README  README.md  README.upgrade  TODO  patch  pisi-cli  pisi-index.xml.1  pisi-spec.dtd  pisi.e3p  pisi.e3t  pisi.e4p  setup.py  setup.py.bak
.eric4project/: pisi.e4q  pisi.e4t
.eric6project/: pisi.e4q  pisi.e4t  pisi.e6t
doc/: dependency.tex  gitstats-1.1b.html  gitstats-1.1b.txt  package_versions.tex  pardus-devel.txt  pisi.lyx
etc/: mirrors.conf
pisi/: __init__.py  api.py  archive.py  atomicoperations.py  build.py  comariface.py  component.py  config.py  config.py.bak  configfile.py  constants.py  context.py  dependency.py  fetcher.py  file.py  files.py  graph.py  index.py  installdb.py  itembyrepodb.py  lockeddbshelve.py  metadata.py  mirrors.py  oo.py  oo.py.bak  operations.py  package.py  packagedb.py  pgraph.py  repodb.py  sourcearchive.py  sourcedb.py  specfile.py  ui.py  uri.py  util.py  version.py
po/: .gitignore  README  pisi.pot  tr.mo  tr.po
scripts/: calc-build-order.py  calc-build-order.py.bak  cat-db.py  check-source-repo.py  check-source-repo.py.bak  convert_history.py  fetchAll.py  find-lib-deps.py  fix_old_metadata_files.py  fix_old_metadata_files.py.bak  lspisi  missing-binary.py  missing-binary.py.bak  pisimedia  pisimedia.bak  pisish  repo-diff.py  repo-diff.py.bak  repostats.py  residuary-binary.py  residuary-binary.py.bak  rmcomp-source-repo.py  rmcomp-source-repo.py.bak  unpisi
tests/: .gitignore  README  README.md  a.xml  actionsapitests.py  actionsapitests.py.bak  archivetests.py  autoxmltests.py  autoxmltests.py.bak  build.sh  buildtests.py  buildtests.py.bak  configfiletests.py  conflicttests.py  light.sh  (+32 more)
tests/helloworld/helloworld-2.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
tests/helloworld/helloworld-2.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
tests/helloworld/helloworld-2.0/config/: config.h.in  helloworld-id  mkinstalldirs
tests/helloworld/helloworld-2.0/src/: General.hxx  Helloworld.cxx  ISO_Library.hxx  Log.cxx  Log.hxx  Makefile.am  Makefile.in  Utility.cxx  Utility.hxx
(+231 files in other folders)
